--- a/app/livescore/Livescore.module.scss
+++ b/app/livescore/Livescore.module.scss
@@ -5,9 +5,11 @@
   border-radius: 5px;
   padding: 15px;
   margin-bottom: 10px;
-  margin-left: 10px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #f5f5f5;
-  width: 100%;
+  width: 90%;
+  max-width: 1000px;
 }
 
 .matchInfo {
@@ -48,4 +50,27 @@
 
 .teamsScores {
   color: #9c27b0;
+}
+.sportButtonsContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.strSportButton {
+  background-color: #001e28;
+  color: #ffffff;
+  border: none;
+  border-radius: 55px;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+  margin: 0 30px;
+  transition: color 0.3s;
+}
+
+.strSportButton:hover {
+  color: rgb(76, 98, 161);
 }
